# email-alert-cli

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  wiki.toml
.cursor/: ai-gateway.json
.cursor/agents/: ssot-program-mentor.md
.cursor/rules/: agent-cloudflare-execution.mdc  ai-inference-model-provenance.mdc  architecture-decision-framework.mdc  carmel-edr-intent-coordination.mdc  cloudflare-mcp-session.mdc  cloudflare-token-1password-bootstrap.mdc  cursor-agent-edr-parallel-workers.mdc  cursor-agents-bootstrap.mdc  cursor-cross-host-enforcement-sync.mdc  cursor-grok-agent-hierarchy-and-loops.mdc  cursor-policy-enforcement.mdc  devsecops-enforcement.mdc  machine-lane-git-commit-enforcement.mdc  onepassword-cli-session-gate.mdc  pr-first-parallel-workflow-enforcement.mdc  prompt-context-postgres-policy.mdc  rust-edge-workers-preference.mdc  rust-first-program-automation.mdc  shared-module-integration-enforcement.mdc  ssot-doc-lifecycle-enforcement.mdc  token-governance-enforcement.mdc  vendor-documentation-first-cloudflare-xai.mdc  waf-firewall-analysis-and-deployment-program.mdc  wiki-mcp-cursor-mount-enforcement.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: SSOT_POINTER.md  WIKI_LOCAL.md
src/: lib.rs  main.rs
wiki/: README.md
